fix collapse and update version

--- a/frontend/scss/_page-home.scss
+++ b/frontend/scss/_page-home.scss
@@ -66,7 +66,7 @@
   }
 
   header {
-    background-image: url(../img/bg/bg-header.webp?v=0.0.0.4);
+    background-image: url(../img/bg/bg-header.webp?v=0.0.0.5);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -122,13 +122,13 @@
       height: 450px;
       max-width: 100%;
       position: relative;
-      background-image: url(../img/bg/box-shade.svg?v=0.0.0.4);
+      background-image: url(../img/bg/box-shade.svg?v=0.0.0.5);
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
       
       @media screen and (max-width: 768px) {
-        background-image: url(../img/bg/box-shade-mobile.svg?v=0.0.0.4);
+        background-image: url(../img/bg/box-shade-mobile.svg?v=0.0.0.5);
       }
 
       &__content {
@@ -162,8 +162,8 @@
 
   .section-0 {
     background-image: 
-      url(../img/bg/section-0-platform.webp?v=0.0.0.4),
-      url(../img/bg/bg-section-0.webp?v=0.0.0.4), 
+      url(../img/bg/section-0-platform.webp?v=0.0.0.5),
+      url(../img/bg/bg-section-0.webp?v=0.0.0.5), 
       radial-gradient(circle,rgba(2, 0, 36, 1) 0%, rgba(101, 116, 235, 1) 0%, rgba(0, 20, 120, 1) 70%);
     background-repeat: no-repeat, no-repeat, no-repeat;
     background-color: #0C0818;
@@ -175,7 +175,7 @@
     @media screen and (max-width: 1399px){
       background-color: #020024;
       background-image: 
-        url(../img/bg/section-0-platform.webp?v=0.0.0.4), 
+        url(../img/bg/section-0-platform.webp?v=0.0.0.5), 
         radial-gradient(circle,rgba(2, 0, 36, 1) 0%, rgba(101, 116, 235, 1) 0%, rgba(0, 20, 120, 1) 70%),
         ;
       background-repeat: no-repeat, no-repeat;
@@ -215,7 +215,7 @@
     background-color: #01020A;
 
     &__target-box {
-      background-image: url(../img/bg/bg-section-1.svg?v=0.0.0.4);
+      background-image: url(../img/bg/bg-section-1.svg?v=0.0.0.5);
       background-repeat: no-repeat;
       background-position: center;
       background-size: 100%;
@@ -278,7 +278,7 @@
 
   .section-2 {
     background-color: #090B3D;
-    background-image: url(../img/bg/bg-section-2-top-left.webp?v=0.0.0.4), url(../img/bg/bg-section-2-bottom-right.webp?v=0.0.0.4);
+    background-image: url(../img/bg/bg-section-2-top-left.webp?v=0.0.0.5), url(../img/bg/bg-section-2-bottom-right.webp?v=0.0.0.5);
     background-repeat: no-repeat, no-repeat;
     background-size: 100%, 100%;
     background-position: top left, bottom right;
@@ -362,7 +362,7 @@
             }
           }
           li::before {
-            background-image: url(../img/icon/check-square.svg?v=0.0.0.4);
+            background-image: url(../img/icon/check-square.svg?v=0.0.0.5);
           }
         }
   
@@ -374,7 +374,7 @@
             }
           }
           li::before {
-            background-image: url(../img/icon/uncheck-square.svg?v=0.0.0.4);
+            background-image: url(../img/icon/uncheck-square.svg?v=0.0.0.5);
           }
         }
       }
@@ -644,7 +644,7 @@
 
           &::before {
             content: " ";
-            background-image: url(../img/icon/check-circle.svg?v=0.0.0.4);
+            background-image: url(../img/icon/check-circle.svg?v=0.0.0.5);
             box-shadow: 0px 4px 4px 0px #FFFFFF50;
             background-repeat: no-repeat;
             background-position: center;
